networkpolicy/networkpolicy__basic_kafka_setup__strimzi__all__strimzi__egress__ports__strimzi__nr53__lines15.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: strimzi--all--strimzi--egress--ports--strimzi--nr53
  namespace: strimzi
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          stacktic.io/namespace: strimzi
